add login page and template

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{#{% block title %}Hello HomeController!{% endblock %}#}
+{% block title %} Snowtricks {% endblock %}
 
 {% block body %}
     {% include 'home/welcome.html.twig' %}
