--- a/templates/home/welcome.html.twig
+++ b/templates/home/welcome.html.twig
@@ -10,218 +10,24 @@
         </a>
     </div>
 </div>
-<div id="listTricks" class="container mt-5">
+<div id="listTricks" class="container mt-5" style="max-width: 1400px;">
     <div class="bloc_cards" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr)); gap: 40px">
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
+        {% for figure in figures %}
+            <div class="card" style="width: 17rem; height: 11rem;">
+                <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
+                    <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
+                </div>
+                <div class="card-body d-flex align-items-center justify-content-between p-2" style="border-top: outset;">
+                    <a href="#">
+                        <h5 class="card-title text-decoration-none text-black" title="{{ figure.title }}">{{ figure.title|u.truncate(16, '...', false) }}</h5>
+                    </a>
+                    <div class="bloc_button-card">
+                        <a href="#"><i class="fa-solid fa-pencil text-black"></i></a>
+                        <a href="#"><i class="fa-solid fa-trash-can text-black"></i></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="card" style="width: 16rem; height: 11rem;">
-            <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-            </div>
-            <div class="card-body d-flex align-items-center" style="padding: 0; border-top: outset;">
-                <a href="#" class="btn">
-                    <h5 class="card-title text-decoration-none">Ollie and Nollie</h5>
-                </a>
-                <div class="bloc_button-card">
-                    <a href="#" class="btn"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="#" class="btn"><i class="fa-solid fa-trash-can"></i></a>
-                </div>
-            </div>
-        </div>
+        {% endfor %}
     </div>
     <div class="container mt-5 p-5" style="width: 20%; height: 11rem;">
         <div class="card-body d-flex align-items-center p-3" style="border: outset;">
