--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,4 +4,5 @@
 
 {% block body %}
     {% include 'home/welcome.html.twig' %}
+    <script src="{{ asset('../../js/welcome.js') }}"></script>
 {% endblock %}
