--- a/templates/home/welcome.html.twig
+++ b/templates/home/welcome.html.twig
@@ -5,31 +5,14 @@
         </div>
     </div>
     <div class="position-absolute bottom-0 end-0">
-        <a href="#listTricks" style="color: black;">
+        <a href="#anchorBottomScreen" style="color: black;">
             <i class="fa-solid fa-arrow-down fs-1" style="position: absolute; bottom: 80px; right: 60px;"></i>
         </a>
     </div>
 </div>
-<div id="listTricks" class="container mt-5" style="max-width: 1400px;">
-    <div class="bloc_cards" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr)); gap: 40px">
-        {% for figure in figures %}
-            <div class="card" style="width: 17rem; height: 11rem;">
-                <div class="img-card" style="text-align: center; width: 100%; height: 100%; overflow: hidden;">
-                    <img src="/img/figure-0001.jpeg" class="card-img-top" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
-                </div>
-                <div class="card-body d-flex align-items-center justify-content-between p-2" style="border-top: outset;">
-                    <a href="#">
-                        <h5 class="card-title text-decoration-none text-black" title="{{ figure.title }}">{{ figure.title|u.truncate(16, '...', false) }}</h5>
-                    </a>
-                    <div class="bloc_button-card">
-                        <a href="#"><i class="fa-solid fa-pencil text-black"></i></a>
-                        <a href="#"><i class="fa-solid fa-trash-can text-black"></i></a>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
-    </div>
-    <div class="container mt-5 p-5" style="width: 20%; height: 11rem;">
+<div class="container mt-5" style="max-width: 1400px;">
+    <div class="bloc_cards" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr)); gap: 40px"></div>
+    <div id="load_spinner" class="container mt-5 p-5" style="display: flex; width: 20%; height: 11rem;">
         <div class="card-body d-flex align-items-center p-3" style="border: outset;">
             <div class="bloc_button-card m-auto">
                 <i class="fa-solid fa-spinner fa-spin-pulse fa-xl"></i>
@@ -37,10 +20,9 @@
             </div>
         </div>
     </div>
-    <div class="position-absolute end-0">
+    <div id="anchorBottomScreen" class="position-absolute end-0">
         <a href="#barNav" style="color: black;">
             <i class="fa-solid fa-arrow-up fs-1" style="position: absolute; bottom: 80px; right: 60px;"></i>
         </a>
-
     </div>
 </div>
