--- a/templates/layouts/nav.html.twig
+++ b/templates/layouts/nav.html.twig
@@ -8,7 +8,7 @@
             <div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="navbar-brand" href="/">Home</a>
+                        <a class="navbar-brand" href="{{ path('app_home') }}">Home</a>
                     </li>
                     <li class="nav-item">
                         <p class="navbar-brand">|</p>
@@ -20,7 +20,7 @@
                         <p class="navbar-brand">|</p>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-brand" href="/login">Sign in</a>
+                        <a class="navbar-brand" href="{{ path('app_login') }}">Sign in</a>
                     </li>
                     <li class="nav-item">
                         <p class="navbar-brand">|</p>
@@ -32,7 +32,7 @@
                         <p class="navbar-brand">|</p>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-brand" href="#">Logout</a>
+                        <a class="navbar-brand" href="{{ path('app_login') }}">Logout</a>
                     </li>
                 </ul>
             </div>
