--- a/templates/details/trick.html.twig
+++ b/templates/details/trick.html.twig
@@ -35,7 +35,7 @@
                  style="width: 100%; height: 100%; object-fit: cover;">
         </div>
         <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{ youtubeId }}" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{ youtubeId }}" allowfullscreen></iframe>
         </div>
         <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
             <img src="https://picsum.photos/200" alt="image snowboarding"
