--- a/templates/layouts/nav.html.twig
+++ b/templates/layouts/nav.html.twig
@@ -14,7 +14,7 @@
                         <p class="navbar-brand">|</p>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-brand" href="#">Tricks</a>
+                        <a class="navbar-brand" href="{{ path('app_new') }}">Tricks</a>
                     </li>
                     <li class="nav-item">
                         <p class="navbar-brand">|</p>
