--- a/templates/new/newForm.html.twig
+++ b/templates/new/newForm.html.twig
@@ -1,48 +1,60 @@
 <div class="container mt-5" style="max-width: 850px;">
     <h1 class="text-center">Create your new figure</h1>
     <!-- Form for new figure begin -->
-        {{ form_start(form) }}
-        <div class="form-group p-3">
-            {{ form_row(form.title) }}
-        </div>
-        <div class="form-group p-3">
-            {{ form_row(form.contentFigure) }}
-        </div>
-        <div class="form-group p-3">
-            {{ form_row(form.category) }}
-        </div>
+    {{ form_start(form, {'attr': {'id': 'formFigure'}}) }}
+    {{ form_row(form._token) }}
+    <div class="form-group p-3">
+        {{ form_row(form.title) }}
+    </div>
+    <div class="form-group p-3">
+        {{ form_row(form.contentFigure) }}
+    </div>
+    <div class="form-group p-3">
+        {{ form_row(form.category) }}
+    </div>
 
-        <div class="d-flex p-3 justify-content-center">
-            <input id="addMedia" class="p-3" type="button" value="Add media">
-        </div>
-
-        <div id="blocMedias">
-            <div id="blocVideos"></div>
-            <div id="blocImages"></div>
-        </div>
-
-        <div id="hiddenFormPicture" class="form-group p-3">
-            {{ form_row(form.pictureFigure, {'attr': {'id': 'pictureFigure_' ~ uniqueIdPicture}}) }}
-        </div>
+    <div class="d-flex p-3 justify-content-center">
+        <input id="addMedia" class="p-3" type="button" value="Add media">
+    </div>
+        <!-- Form for new media begin -->
+    {{ form_start(formMedia, {'attr': {'id': 'formMedia'}}) }}
         <div id="hiddenFormVideo" class="form-group p-3">
-            {{ form_row(form.videoFigure, {'attr': {'id': 'videoFigure_' ~ uniqueIdVideo}}) }}
+            {{ form_row(formMedia.med_video, {
+                'attr': {
+                    'id': uniqueIdVideo
+                }
+            }) }}
         </div>
-        <div class="d-flex flex-row-reverse mt-3 p-3">
-            <button class="btn btn-secondary">
-                Create
-            </button>
+        <div id="hiddenFormPicture" class="form-group p-3">
+            {{ form_row(formMedia.med_image, {
+                'attr': {
+                    'id': uniqueIdPicture
+                }
+            }) }}
         </div>
-        {{ form_end(form) }}
+        {{ form_end(formMedia) }}
+
+    <!-- Form for new media ending -->
+    {{ form_end(form) }}
     <!-- Form for new figure ending -->
+    <!-- Submit form figure -->
+    <div class="d-flex flex-row-reverse mt-3 p-3">
+        <button id="createFigureBtn" class="btn btn-secondary">
+            Create a new figure
+        </button>
+    </div>
 </div>
 
-<!-- Ajoutez les classes Bootstrap à votre boîte de dialogue -->
-<div id="myModal" class="modal">
+<!-- Box for add medias -->
+<div id="boxMedia" class="modal">
     <div class="modal-content">
         <div class="modal-body">
             <p>Choisissez une option :</p>
             <button id="addImage" class="btnMedia">Ajouter une image</button>
             <button id="addVideo" class="btnMedia">Ajouter une vidéo</button>
+        </div>
+        <div class="modal-footer">
+            <button id="closeMedia" class="btnMedia">Leave</button>
         </div>
     </div>
 </div>
@@ -79,7 +91,7 @@
         display: none;
     }
 
-    #hiddenFormPicture{
+    #hiddenFormPicture {
         display: none;
     }
 </style>
