--- a/templates/details/trick.html.twig
+++ b/templates/details/trick.html.twig
@@ -11,7 +11,10 @@
         </div>
     </div>
     <div class="jumbotron jumbotron-fluid text-center text-dark d-flex align-items-center"
-         style="background-image: url(/img/figure-0002.jpg); background-size: cover; background-position: center; height: 90vh;">
+         style="background-image: url({{ medias[0].getMedImage ? ('/img/uploads/' ~ medias[0].getMedImage) : ('/img/snowboard-7000597_1920.jpg') }});
+                 background-size: cover;
+                 background-position: center;
+                 height: 90vh;">
         <div class="container">
             <h1 class="display-4 mx-auto"
                 style="text-shadow: 1px 1px 0 white, -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white;">{{ figure.getTitle() }}</h1>
@@ -22,58 +25,26 @@
 <!-- Bloc media begin -->
 <div class="container mt-3 mb-3 p-3" style="max-width: 1400px; border: 1px solid black">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-6 g-3 d-flex justify-content-around gap-3">
-        <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <img src="https://picsum.photos/200" alt="image snowboarding"
-                 style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-        <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <img src="https://picsum.photos/200" alt="image snowboarding"
-                 style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-        <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <img src="https://picsum.photos/200" alt="image snowboarding"
-                 style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
+        {% dump("Test debug output") %}
         {% if medias is not null %}
             {% for media in medias %}
-                <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{ media.getMedVideo() }}" allowfullscreen></iframe>
-                </div>
+                {% if media.getMedVideo() is not null %}
+                    <div class="bloc_media card p-0"
+                         style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{ media.getMedVideo() }}"
+                                allowfullscreen></iframe>
+                    </div>
+                {% endif %}
+
+                {% if media.getMedImage() is not null %}
+                    <div class="bloc_media card p-0"
+                         style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
+                        <img src="/img/uploads/mini/300x300-{{ media.getMedImage }}" alt="image snowboarding"
+                             style="width: 100%; height: 100%; object-fit: cover;">
+                    </div>
+                {% endif %}
             {% endfor %}
         {% endif %}
-        <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <img src="https://picsum.photos/200" alt="image snowboarding"
-                 style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-        <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <img src="https://picsum.photos/200" alt="image snowboarding"
-                 style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-        <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <img src="https://picsum.photos/200" alt="image snowboarding"
-                 style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-        <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <img src="https://picsum.photos/200" alt="image snowboarding"
-                 style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-        <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <img src="https://picsum.photos/200" alt="image snowboarding"
-                 style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-        <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <img src="https://picsum.photos/200" alt="image snowboarding"
-                 style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-        <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <img src="https://picsum.photos/200" alt="image snowboarding"
-                 style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-        <div class="bloc_media card p-0" style="border: 1px solid red; width: 180px; height: 120px; overflow: hidden;">
-            <img src="https://picsum.photos/200" alt="image snowboarding"
-                 style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-        <!-- Répète le bloc_media pour chaque élément -->
     </div>
 </div>
 <!-- Bloc media ending -->
