--- a/templates/details/index.html.twig
+++ b/templates/details/index.html.twig
@@ -5,5 +5,6 @@
 {% block body %}
     {% include 'details/trick.html.twig' %}
     {% include 'details/comments.html.twig' %}
-    <script src="{{ asset('../../js/comment.js') }}"></script>
+    <script src="{{ asset('js/comment.js') }}"></script>
+    <script src="{{ asset('js/trick.js') }}"></script>
 {% endblock %}
