--- a/templates/home/welcome.html.twig
+++ b/templates/home/welcome.html.twig
@@ -11,7 +11,13 @@
     </div>
 </div>
 <div class="container mt-5" style="max-width: 1400px;">
-    <div class="bloc_cards" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr)); gap: 40px"></div>
+    <div class="bloc_cards" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr)); gap: 40px;"></div>
+    <div class="container d-flex align-items-center justify-content-center">
+        <div id="flagEmptyData" class="container mt-5 p-5 text-center" style="display: none">
+            <p>No figures are available</p>
+            <br><i class="fa-solid p-5 fa-person-snowboarding fa-2xl"></i>
+        </div>
+    </div>
     <div id="load_spinner" class="container mt-5 p-5" style="display: flex; width: 20%; height: 11rem;">
         <div class="card-body d-flex align-items-center p-3" style="border: outset;">
             <div class="bloc_button-card m-auto">
