add method editing figure, Case manage : title, content and category

--- a/templates/details/comments.html.twig
+++ b/templates/details/comments.html.twig
@@ -1,4 +1,4 @@
-<section id="comments">
+<section id="comments" class="bg-light">
     <hr>
     <h3 class="d-flex justify-content-center">Leave a comment</h3>
     <!--Leave a comment begin -->
