refactoring + add descriptions functions and methods

--- a/templates/details/comments.html.twig
+++ b/templates/details/comments.html.twig
@@ -19,7 +19,14 @@
     <!--Leave a comment ending -->
     <hr>
     <!--List Comments begin -->
-    <div id="listCommments" class="container mt-3 d-flex flex-column align-items-center"></div>
+    <div id="listCommments" class="container mt-3 d-flex flex-column align-items-center">
+        <div id="flagEmptyComment" class="p-3 mt-5 text-center d-none">
+            <p>
+                No comment published
+            </p><br/>
+            <i class="fa-regular fa-face-frown fa-2xl"></i>
+        </div>
+    </div>
     <!--List Comments ending -->
     <!-- Loadmore comment begin -->
     <div id="loadComment" class="container p-5" style="display: flex; width: 20%; height: 11rem; cursor: pointer">
