--- a/templates/new/newForm.html.twig
+++ b/templates/new/newForm.html.twig
@@ -24,27 +24,29 @@
     </div>
     {{ form_end(form) }}
     <!-- Form for new figure ending -->
-    <!-- Submit form figure -->
+    <!-- Submit form figure begin -->
     <div class="d-flex flex-row-reverse mt-3 p-3">
         <button id="createFigureBtn" class="btn btn-secondary">
             Create a new figure
         </button>
     </div>
+    <!-- Submit form figure ending -->
 </div>
 
-<!-- Box for add medias -->
+<!-- Box for add medias begin -->
 <div id="boxMedia" class="modal">
     <div class="modal-content">
         <div class="modal-body">
-            <p>Choisissez une option :</p>
-            <button id="addImage" class="btnMedia">Ajouter une image</button>
-            <button id="addVideo" class="btnMedia">Ajouter une vidéo</button>
+            <p>Choose an option:</p>
+            <button id="addImage" class="btnMedia">Add a picture</button>
+            <button id="addVideo" class="btnMedia">Add a video</button>
         </div>
         <div class="modal-footer">
             <button id="closeMedia" class="btnMedia">Leave</button>
         </div>
     </div>
 </div>
+<!-- Box for add medias ending -->
 
 <style>
     .modal {
