add method for delete only media for upgrade update + refacto + add utilService

--- a/templates/details/comments.html.twig
+++ b/templates/details/comments.html.twig
@@ -20,7 +20,7 @@
     <hr>
     <!--List Comments begin -->
     <div id="listCommments" class="container mt-3 d-flex flex-column align-items-center">
-        <div id="flagEmptyComment" class="p-3 mt-5 text-center d-none">
+        <div id="flagEmptyComment" class="p-3 mt-5 mb-5 text-center d-none">
             <p>
                 No comment published
             </p><br/>
