--- a/templates/update/index.html.twig
+++ b/templates/update/index.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
     {% include 'update/updateForm.html.twig' %}
-    <script src="{{ asset('../../js/updateForm.js') }}"></script>
-    <script src="{{ asset('../../js/utilsForm.js') }}"></script>
+    <script type="module" src="{{ asset('../../js/updateForm.js') }}"></script>
+    <script type="module" src="{{ asset('../../js/utilsForm.js') }}"></script>
 {% endblock %}
