--- a/templates/details/index.html.twig
+++ b/templates/details/index.html.twig
@@ -7,5 +7,5 @@
     {% include 'details/comments.html.twig' %}
     <script src="{{ asset('js/comment.js') }}"></script>
     <script src="{{ asset('js/trick.js') }}"></script>
-    <script src="{{ asset('js/utilsForm.js') }}"></script>
+    <script type="module" src="{{ asset('js/utilsForm.js') }}"></script>
 {% endblock %}
