--- a/templates/update/updateForm.html.twig
+++ b/templates/update/updateForm.html.twig
@@ -16,10 +16,10 @@
     <div class="form-group p-3">
         {{ form_row(formUpdate.category) }}
     </div>
-    <div class="container d-flex flex-column gap-5 mt-5 mb-5">
+    <div class="container d-flex flex-column gap-5 mt-5 mb-5 border p-4">
         {% if app.request.attributes.get('_route') == 'tricks_editing' %}
             <h2>Videos</h2>
-            <div class="container d-flex gap-3">
+            <div id="listMediaVideo" class="container d-flex gap-3">
                 {% for media in figure.medias %}
                     {% if media.getMedVideo is not null %}
                         <div class="bloc_media card p-0"
@@ -37,7 +37,7 @@
                 {% endfor %}
             </div>
             <h2>Pictures</h2>
-            <div class="container d-flex gap-3">
+            <div id="listMediaPicture" class="container d-flex gap-3">
                 {% for media in figure.medias %}
                     {% if media.getMedImage is not null %}
                         <div class="bloc_media card p-0"
@@ -55,9 +55,9 @@
                 {% endfor %}
             </div>
         {% endif %}
-    </div>
-    <div class="d-flex p-3 justify-content-center">
-        <input id="addMedia" class="p-3" type="button" value="Add media">
+        <div class="d-flex p-3 justify-content-end">
+            <input id="addMedia" class="p-3 btn btn-secondary" type="button" value="Add media">
+        </div>
     </div>
     {{ form_end(formUpdate) }}
     <!-- Submit form update figure begin -->
@@ -77,7 +77,7 @@
     </div>
     {{ form_end(formMedia) }}
     <div class="d-flex flex-row-reverse mt-3 p-3">
-        <button id="btnEditMedia" type="submit" class="btn btn-secondary">Add new media</button>
+        <button id="btnEditMedia" type="submit" class="btn btn-warning" style="display: none">Add your medias</button>
     </div>
 </div>
 
