refacto code duplicated + charging first comments in the DOM

--- a/templates/new/index.html.twig
+++ b/templates/new/index.html.twig
@@ -4,5 +4,6 @@
 
 {% block body %}
     {% include 'new/newForm.html.twig' %}
-    <script src="{{ asset('../../js/newForm.js') }}"></script>
+    <script type="module" src="{{ asset('../../js/newForm.js') }}"></script>
+    <script type="module" src="{{ asset('../../js/utilsForm.js') }}"></script>
 {% endblock %}
