--- a/templates/update/index.html.twig
+++ b/templates/update/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello NewController!{% endblock %}
+{% block title %}Improve your trick{% endblock %}
 
 {% block body %}
     {% include 'update/updateForm.html.twig' %}
